# riscv-trace-spec

./: .gitmodules
te_codec/: CMakeLists.txt  README.md  main.c
te_codec/CMakeModules/: CodeCoverage.cmake
te_codec/esp_trace_decoder/: esp_trace_decoder.c  esp_trace_decoder.h  esp_trace_packets.h
te_codec/src/: decoder-algorithm-public.c  te-memory.c  te-memory.h
